# GeoLocations

./: .gitignore  IP Geolocator.html  Pipfile  README.md  main.py  pyproject.toml
mods/: netCall.py  test.py
