[tool.poetry]
name = "geolocations"
version = "0.1.0"
description = "Small python program that runs the traceroute command and prints the IP address's location on a map."
authors = ["ApoorvaKashyap <apoorvakashyap54@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
folium = "^0.12.1"
ip2geotools = "^0.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
